# hwp-rs

./: .gitignore  Cargo.toml  HWP_COMPRESSION_SOLUTION.md  HWP_RECORD_HEADER_FIX.md  README.md
.github/workflows/: test.yml
crates/hwp-cli/: Cargo.toml
crates/hwp-cli/examples/: cfb_parser.rs  convert.rs  dump_records.rs  extract_text.rs
crates/hwp-cli/src/: batch.rs  error.rs  main.rs
crates/hwp-cli/src/commands/: batch.rs  convert.rs  extract.rs  info.rs  mod.rs  search.rs  validate.rs
crates/hwp-core/: Cargo.toml
crates/hwp-core/src/: lib.rs
crates/hwp-core/src/constants/: ctrl_id.rs  fill_type.rs  mod.rs  tag_id.rs
crates/hwp-core/src/errors/: mod.rs
crates/hwp-core/src/models/: document.rs  header.rs  mod.rs  paragraph.rs  record.rs  section.rs
crates/hwp-parser/: Cargo.toml  README_CFB.md
crates/hwp-parser/src/: lib.rs  text_extractor.rs
crates/hwp-parser/src/cfb/: container.rs  directory.rs  fat.rs  header.rs  mod.rs  stream.rs
crates/hwp-parser/src/compression/: mod.rs
crates/hwp-parser/src/formatters/: html.rs  json.rs  markdown.rs  mod.rs  plain_text.rs  yaml.rs
crates/hwp-parser/src/parser/: doc_info.rs  doc_info_records.rs  header.rs  mod.rs  record.rs  section.rs
crates/hwp-parser/src/reader/: byte_reader.rs  mod.rs
crates/hwp-parser/src/validator/: mod.rs
crates/hwp-parser/tests/: cfb_compression_test.rs  cfb_tests.rs  compression_test.rs  debug_docinfo.rs  debug_multiple_records.rs  doc_info_integration_tests.rs  doc_info_records_test.rs  error_handling_tests.rs  extraction_tests.rs  formatters_test.rs  integration_test.rs  metadata_tests.rs  parsing_tests.rs  record_parser_tests.rs  text_extraction_integration_test.rs  text_extraction_test.rs  validation_tests.rs
crates/hwp-parser/tests/fixtures/: create_test_fixtures.rs
crates/hwp-wasm/: Cargo.toml
crates/hwp-wasm/src/: lib.rs
examples/: parse_doc_info.rs  parse_header.rs
