[package]
name = "hwp-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "HWP file format parser"

[dependencies]
hwp-core = { path = "../hwp-core", features = ["serde"] }
byteorder = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
encoding_rs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }